# StayOnBrand-Backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  main.py
app/middleware/: __init__.py  error_handler.py
app/models/: __init__.py  common.py  enums.py  requests.py  responses.py
app/routers/: __init__.py  brand.py  colors.py  utils.py  validate.py  wcag.py
app/scripts/: BrandColorAlignment.py  ColorValidation.py  ImageA11yEvalution.py
app/services/: __init__.py  auth_service.py  brand_service.py  color_service.py  redis_service.py  storage_service.py  validation_service.py  wcag_service.py
app/utils/: __init__.py  cache.py  file_validation.py
tests/: __init__.py
